--- a/Anchor.toml
+++ b/Anchor.toml
@@ -5,14 +5,23 @@ resolution = true
 skip-lint = false
 
 [programs.localnet]
-dona_sol = "CQxsoWcDU7CpAg2h9xDwuMqFihjxo8pLXQCUe9k1GCfh"
+dona_sol = "GznbGRXZGfVAB6tzeFeYGvwMrQ2T49rgBjLk6A3STmzp"
+
+[programs.devnet]
+dona_sol = "GznbGRXZGfVAB6tzeFeYGvwMrQ2T49rgBjLk6A3STmzp"
 
 [registry]
 url = "https://api.apr.dev"
 
 [provider]
-cluster = "Localnet"
+cluster = "devnet"
 wallet = "~/.config/solana/id.json"
 
 [scripts]
-test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
+test = "yarn run ts-mocha -p ./tsconfig.json -t 2000000 tests/**/*.ts"
+
+[test.validator]
+url = "https://api.mainnet-beta.solana.com"
+
+[[test.validator.clone]]
+address = "CoREENxT6tW1HoK8ypY1SxRMZTcVPm7R94rH4PZNhX7d"
